Optimized translation, quotation display, and menu display

--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,4 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=goodyard-qouteflow.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1088251195087
 NEXT_PUBLIC_FIREBASE_APP_ID=1:1088251195087:web:e9ae476a06569a4b1d11ba
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-KGSE8YBS1V
+NEXT_PUBLIC_GOOGLE_TRANSLATE_API_KEY=AIzaSyDXxIG31aUiY0DHKlj-RgMXUuG1qApLEnE
